tests/expected_invalid_generic_record_construct_type_mismatch.diag.out
<input>:9:36: error: initializer for field 'value' has type 'Int', expected 'Text'
        let box = support::Box<Text> { value: 7 };
                                       ^^^^^^^^
